testsuite/tests/grammar/invalid_lkt/annotated_grammar_2.lkt
import lexer_example
import nodes

@with_lexer(foo_grammar) grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
